fix(popups): change z-index

--- a/src/components/PopupDrawer/PopupDrawer.scss
+++ b/src/components/PopupDrawer/PopupDrawer.scss
@@ -9,6 +9,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(0.75rem, 1.5vw, 1rem);
     color: #fff;
+    z-index: 100;
 
     &-menu {
         position: absolute;
