--- a/src/components/SimplePlayer/SimplePlayer.scss
+++ b/src/components/SimplePlayer/SimplePlayer.scss
@@ -125,6 +125,7 @@
                     opacity: 0;
                     transform: translateX(-50%);
                     transition: opacity 200ms ease-out;
+                    z-index: 100;
                 }
             }
         }
